--- a/index.html
+++ b/index.html
@@ -9,6 +9,47 @@
   </head>
   <body>
     <h1>PokeDex</h1>
+    <div class="poke-container" id="poke-container">
+      <div class="pokemon" style="background-color: rgb(222, 253, 224)">
+        <div class="img-container">
+          <img
+            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/.png"
+            alt="pokemon"
+          />
+        </div>
+        <div class="info">
+          <span class="number">#001</span>
+          <h3 class="name">Bulbasaur</h3>
+          <small class="type"> Type: <span>Grass</span></small>
+        </div>
+      </div>
+      <div class="pokemon" style="background-color: rgb(222, 253, 224)">
+        <div class="img-container">
+          <img
+            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/.png"
+            alt="pokemon"
+          />
+        </div>
+        <div class="info">
+          <span class="number">#001</span>
+          <h3 class="name">Bulbasaur</h3>
+          <small class="type"> Type: <span>Grass</span></small>
+        </div>
+      </div>
+      <div class="pokemon" style="background-color: rgb(222, 253, 224)">
+        <div class="img-container">
+          <img
+            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/.png"
+            alt="pokemon"
+          />
+        </div>
+        <div class="info">
+          <span class="number">#001</span>
+          <h3 class="name">Bulbasaur</h3>
+          <small class="type"> Type: <span>Grass</span></small>
+        </div>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
